hardcard-suite/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hardcard-suite
  labels:
    name: hardcard-suite
    app: hardcard
    version: v1
